--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "angular-route": "^1.6.5",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "jquery": "^3.2.1",
     "mongoose": "^4.11.1",
     "multer": "^1.3.0",
     "q": "^1.5.0"
